Fixed vertical spacing of panels on mobile

--- a/sass/components/_panels.scss
+++ b/sass/components/_panels.scss
@@ -32,6 +32,10 @@ fieldset {
 
 .panel--output {
 	margin-bottom: 2.0rem;
+
+	@media only screen and (max-width: 767px) {
+		margin-top: 2.0rem;
+	}
 }
 
 .created-url {
